<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="library.group8.Group8Activity" >

    <TextView
        android:id="@+id/title_checkout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/goCheckOut_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/goCheckOut_btn"
        android:textStyle="bold" />

    <Button
        android:id="@+id/goDoQuery"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/goDoQuery_btn"
        android:textStyle="bold" />

</LinearLayout>